fix project box aligning on the bottom of a row

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -604,6 +604,7 @@ ol.indicator {
     /*width: 219px;*/
     height: auto;
     margin: 5px;
+    vertical-align: top;
 }
 
 .project-container img {
